--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
