--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/devtools": "^4.3.1",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.13",
     "@reduxjs/toolkit": "^1.9.0",
