--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.3",
     "react-redux": "^8.0.5",
+    "react-ripples": "^2.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
