--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,18 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "blurhash": "^2.0.5",
     "indian-number-format": "^1.0.5",
     "jwt-decode": "^3.1.2",
     "loadash": "^1.0.0",
     "moment": "^2.29.4",
     "nuka-carousel": "^5.4.0",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.4.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-moment": "^1.1.3",
     "react-redux": "^8.0.5",
     "react-ripples": "^2.2.1",
